armature with curve contraint - crash #29064

Closed
opened 2011-10-28 09:11:36 +02:00 by Jan Domański · 5 comments

%%%Hi,

Problem: When I trying to move bone with both "spline IK" and "auto IK" constraint, then blender crashes.

How to reproduce:

  1. In new scene create armature with at least two connected bones
  2. Create a Bézier curve
  3. In pose mode turn on "auto IK"
  4. In pose mode apply "spline IK" to last bone with Bézier curve target and chain length = 2
  5. In pose mode move bone

Attached BLEND file have steps from 1 to 4.
Attached BLEND file was build in: r39307.
Blender crashes in: r39307, 33249, 34736, 35914, 36865, 37702, 38978, 41098, 41330 (newest at this moment)
Blender not crashes in 2.4 because it not supports "spline IK".

%%%

%%%Hi, Problem: When I trying to move bone with both "spline IK" and "auto IK" constraint, then blender crashes. How to reproduce: 1) In new scene create armature with at least two connected bones 2) Create a Bézier curve 3) In pose mode turn on "auto IK" 4) In pose mode apply "spline IK" to last bone with Bézier curve target and chain length = 2 5) In pose mode move bone Attached BLEND file have steps from 1 to 4. Attached BLEND file was build in: r39307. Blender crashes in: r39307, 33249, 34736, 35914, 36865, 37702, 38978, 41098, 41330 (newest at this moment) Blender not crashes in 2.4 because it not supports "spline IK". %%%
Author

Changed status to: 'Open'

Changed status to: 'Open'

%%%Seams like initialize_posetree() in iksolver_plugin.c and initialize_chain() in itasc_plugin.cpp are really buggy. It may also be related to bug #29041, in which the parents are confused in treeik. I would try to fix/rewrite it, but since i don't have any documentation on this function, i don't have a real clue what it is supposed to be doing. Here is the backtrace of the error:

Program received signal SIGSEGV, Segmentation fault.
0x0882ad40 in initialize_posetree (UNUSED_ob=0xa507188, pchan_tip=0xa5078c0)

  at /media/Trekstor_01/temp/blender-build/blender-svn/blender/source/blender/ikplugin/intern/iksolver_plugin.c:100

100 curchan= tree->pchan[target->tip];
(gdb) bt

0 0x0882ad40 in initialize_posetree (UNUSED_ob=0xa507188, pchan_tip=0xa5078c0)

  at /media/Trekstor_01/temp/blender-build/blender-svn/blender/source/blender/ikplugin/intern/iksolver_plugin.c:100

1 0x0882c190 in iksolver_initialize_tree (UNUSED_scene=0xa505ee0, ob=0xa507188, UNUSED_ctime=1)

  at /media/Trekstor_01/temp/blender-build/blender-svn/blender/source/blender/ikplugin/intern/iksolver_plugin.c:502

2 0x0882a919 in BIK_initialize_tree (scene=0xa505ee0, ob=0xa507188, ctime=1)

  at /media/Trekstor_01/temp/blender-build/blender-svn/blender/source/blender/ikplugin/intern/ikplugin_api.c:95

3 0x0888a53a in where_is_pose (scene=0xa505ee0, ob=0xa507188)

  at /media/Trekstor_01/temp/blender-build/blender-svn/blender/source/blender/blenkernel/intern/armature.c:2433

4 0x08926af2 in object_handle_update (scene=0xa505ee0, ob=0xa507188)

  at /media/Trekstor_01/temp/blender-build/blender-svn/blender/source/blender/blenkernel/intern/object.c:2708

5 0x08954d31 in scene_update_tagged_recursive (bmain=0xa4df5b8, scene=0xa505ee0, scene_parent=0xa505ee0)

  at /media/Trekstor_01/temp/blender-build/blender-svn/blender/source/blender/blenkernel/intern/scene.c:972

6 0x08954df4 in scene_update_tagged (bmain=0xa4df5b8, scene=0xa505ee0)

  at /media/Trekstor_01/temp/blender-build/blender-svn/blender/source/blender/blenkernel/intern/scene.c:998
  • 7 0x084404f3 in wm_event_do_notifiers (C=0x97eb6d0) at /media/Trekstor_01/temp/blender-build/blender-svn/blender/source/blender/windowmanager/intern/wm_event_system.c:321
  • 8 0x0843df58 in WM_main (C=0x97eb6d0) at /media/Trekstor_01/temp/blender-build/blender-svn/blender/source/blender/windowmanager/intern/wm.c:389
  • 9 0x0843d49c in main (argc=1, argv=0xbffff424) at /media/Trekstor_01/temp/blender-build/blender-svn/blender/source/creator/creator.c:1266%%%
%%%Seams like initialize_posetree() in iksolver_plugin.c and initialize_chain() in itasc_plugin.cpp are really buggy. It may also be related to bug #29041, in which the parents are confused in treeik. I would try to fix/rewrite it, but since i don't have any documentation on this function, i don't have a real clue what it is supposed to be doing. Here is the backtrace of the error: Program received signal SIGSEGV, Segmentation fault. 0x0882ad40 in initialize_posetree (UNUSED_ob=0xa507188, pchan_tip=0xa5078c0) ``` at /media/Trekstor_01/temp/blender-build/blender-svn/blender/source/blender/ikplugin/intern/iksolver_plugin.c:100 ``` 100 curchan= tree->pchan[target->tip]; (gdb) bt # 0 0x0882ad40 in initialize_posetree (UNUSED_ob=0xa507188, pchan_tip=0xa5078c0) ``` at /media/Trekstor_01/temp/blender-build/blender-svn/blender/source/blender/ikplugin/intern/iksolver_plugin.c:100 ``` # 1 0x0882c190 in iksolver_initialize_tree (UNUSED_scene=0xa505ee0, ob=0xa507188, UNUSED_ctime=1) ``` at /media/Trekstor_01/temp/blender-build/blender-svn/blender/source/blender/ikplugin/intern/iksolver_plugin.c:502 ``` # 2 0x0882a919 in BIK_initialize_tree (scene=0xa505ee0, ob=0xa507188, ctime=1) ``` at /media/Trekstor_01/temp/blender-build/blender-svn/blender/source/blender/ikplugin/intern/ikplugin_api.c:95 ``` # 3 0x0888a53a in where_is_pose (scene=0xa505ee0, ob=0xa507188) ``` at /media/Trekstor_01/temp/blender-build/blender-svn/blender/source/blender/blenkernel/intern/armature.c:2433 ``` # 4 0x08926af2 in object_handle_update (scene=0xa505ee0, ob=0xa507188) ``` at /media/Trekstor_01/temp/blender-build/blender-svn/blender/source/blender/blenkernel/intern/object.c:2708 ``` # 5 0x08954d31 in scene_update_tagged_recursive (bmain=0xa4df5b8, scene=0xa505ee0, scene_parent=0xa505ee0) ``` at /media/Trekstor_01/temp/blender-build/blender-svn/blender/source/blender/blenkernel/intern/scene.c:972 ``` # 6 0x08954df4 in scene_update_tagged (bmain=0xa4df5b8, scene=0xa505ee0) ``` at /media/Trekstor_01/temp/blender-build/blender-svn/blender/source/blender/blenkernel/intern/scene.c:998 ``` - 7 0x084404f3 in wm_event_do_notifiers (C=0x97eb6d0) at /media/Trekstor_01/temp/blender-build/blender-svn/blender/source/blender/windowmanager/intern/wm_event_system.c:321 - 8 0x0843df58 in WM_main (C=0x97eb6d0) at /media/Trekstor_01/temp/blender-build/blender-svn/blender/source/blender/windowmanager/intern/wm.c:389 - 9 0x0843d49c in main (argc=1, argv=0xbffff424) at /media/Trekstor_01/temp/blender-build/blender-svn/blender/source/creator/creator.c:1266%%%
Member

%%%Immediate cause of crash here is conflict between SplineIK and Legacy-IK solver "trees".

Could be patched by surrounding lines 99-106 in ikplugin_api.c with:
if (tree->type == CONSTRAINT_TYPE_KINEMATIC) {
... targets loop ...
}
though that results in a memory leak.
%%%

%%%Immediate cause of crash here is conflict between SplineIK and Legacy-IK solver "trees". Could be patched by surrounding lines 99-106 in ikplugin_api.c with: if (tree->type == CONSTRAINT_TYPE_KINEMATIC) { ... targets loop ... } though that results in a memory leak. %%%
Member

%%%Fixed in svn.%%%

%%%Fixed in svn.%%%
Member

Changed status from 'Open' to: 'Resolved'

Changed status from 'Open' to: 'Resolved'
Sign in to join this conversation.
No Label
Interest
Alembic
Interest
Animation & Rigging
Interest
Asset Browser
Interest
Asset Browser Project Overview
Interest
Audio
Interest
Automated Testing
Interest
Blender Asset Bundle
Interest
BlendFile
Interest
Collada
Interest
Compatibility
Interest
Compositing
Interest
Core
Interest
Cycles
Interest
Dependency Graph
Interest
Development Management
Interest
EEVEE
Interest
EEVEE & Viewport
Interest
Freestyle
Interest
Geometry Nodes
Interest
Grease Pencil
Interest
ID Management
Interest
Images & Movies
Interest
Import Export
Interest
Line Art
Interest
Masking
Interest
Metal
Interest
Modeling
Interest
Modifiers
Interest
Motion Tracking
Interest
Nodes & Physics
Interest
OpenGL
Interest
Overlay
Interest
Overrides
Interest
Performance
Interest
Physics
Interest
Pipeline, Assets & IO
Interest
Platforms, Builds & Tests
Interest
Python API
Interest
Render & Cycles
Interest
Render Pipeline
Interest
Sculpt, Paint & Texture
Interest
Text Editor
Interest
Translations
Interest
Triaging
Interest
Undo
Interest
USD
Interest
User Interface
Interest
UV Editing
Interest
VFX & Video
Interest
Video Sequencer
Interest
Virtual Reality
Interest
Vulkan
Interest
Wayland
Interest
Workbench
Interest: X11
Legacy
Blender 2.8 Project
Legacy
Milestone 1: Basic, Local Asset Browser
Legacy
OpenGL Error
Meta
Good First Issue
Meta
Papercut
Meta
Retrospective
Meta
Security
Module
Animation & Rigging
Module
Core
Module
Development Management
Module
EEVEE & Viewport
Module
Grease Pencil
Module
Modeling
Module
Nodes & Physics
Module
Pipeline, Assets & IO
Module
Platforms, Builds & Tests
Module
Python API
Module
Render & Cycles
Module
Sculpt, Paint & Texture
Module
Triaging
Module
User Interface
Module
VFX & Video
Platform
FreeBSD
Platform
Linux
Platform
macOS
Platform
Windows
Priority
High
Priority
Low
Priority
Normal
Priority
Unbreak Now!
Status
Archived
Status
Confirmed
Status
Duplicate
Status
Needs Info from Developers
Status
Needs Information from User
Status
Needs Triage
Status
Resolved
Type
Bug
Type
Design
Type
Known Issue
Type
Patch
Type
Report
Type
To Do
No Milestone
No project
No Assignees
3 Participants
Notifications
Due Date
The due date is invalid or out of range. Please use the format 'yyyy-mm-dd'.

No due date set.

Dependencies

No dependencies set.

Reference: blender/blender#29064
No description provided.